# gandalf

./: .gitignore  CLAUDE.MD  Dockerfile  LICENSE  PLAN-rust-conversion.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
12_17_2025/: comparison.py
docs/: predicate_handling.md  response_path_analysis.md
gandalf/: __init__.py  config.py  diagnostics.py  enrichment.py  graph.py  heartbeat.py  lmdb_store.py  loader.py  logging_config.py  models.py  openapi-config.yaml  openapi.py  search.py  server.py  validation.py
gandalf/search/: lookup.py  reconstruct.py
scripts/: build_graph.py  diagnose.py  gandalf_notebook.ipynb  query_paths.py
stress_tests/: locustfile.py
tests/: conftest.py  test_attribute_constraints.py  test_enrichment.py  test_loader.py  test_lookup_response.py  test_models.py  test_node_filters.py  test_sanity.py  test_search.py
tests/fixtures/: edges.jsonl  edges.ndjson  nodes.jsonl  nodes.ndjson
workers/gandalf/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  requirements-dev.txt  requirements.txt  worker.py
