[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gandalf"
version = "0.1.0"
description = "Fast 3-hop path finding in large knowledge graphs"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Max Wang", email = "max@covar.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
]

[project.scripts]
gandalf-build = "scripts.build_graph:main"
gandalf-query = "scripts.query_paths:main"
gandalf-diagnose = "scripts.diagnose:main"
